--- a/Medbot - Web/templates/index.html
+++ b/Medbot - Web/templates/index.html
@@ -22,7 +22,7 @@
         <div style="text-align: center;">
             <button type="button" id="myCheck" onclick="wishMe()">Start Medbot</button>
         </div>
-        <h3 class="no-browser-support">Sorry, Your Browser Doesn't Support the Web Speech API. Try Opening This Demo In Google Chrome.</h3>
+        <h3 class="no-browser-support">Sorry, Your Browser Doesn't Support the Web Speech API. Try Opening In Google Chrome.</h3>
 
         <div class="dynamicBox">
             <div class="dynamicBox_inner_contents">
