--- a/Medbot - Web/static/styles.css
+++ b/Medbot - Web/static/styles.css
@@ -37,8 +37,9 @@ input {
 }
 
 #status {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     text-align: center;
+    font-weight: bold;
     margin: 10 0 10 0;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -60,7 +61,7 @@ input {
     padding: 50px 5%;
     border-radius: 6px;
     border: 2px solid brown;
-    background-color: #C6DEFF
+    background-color: #44eb84
 }
 
 .inner_contents {
@@ -78,13 +79,14 @@ input {
     margin-top: 35px;
 }
 
+#Medicine{
+    border-radius: 5px;
+}
+
+
 #medicine-icon,
 #schedule-icon {
     background-image: url('speaker.png');
-    /* background-size: cover; */
-    /* width: 300px;
-    height: 200px; */
-    /* font-size: 2rem; */
     padding: 12px 14px;
     border-radius: 4px;
     cursor: pointer;
@@ -93,12 +95,14 @@ input {
 #update{
     padding: 3px;
     border: solid rgb(110, 108, 108) 2px;
-    border-radius: 50px;
-    background-image: linear-gradient(45deg,rgb(167, 248, 191), white);
+    border-radius: 10px;
+    background-image: linear-gradient(45deg,rgb(167, 248, 191), white); 
 
 }
 #update:hover
 {
+    border-radius: 10px;
+    font-weight: bold;
     background-image: linear-gradient(45deg,rgb(167, 248, 191), rgb(0, 255, 255));
 }
 
